<resources>
    <string name="app_name">通用工具</string>
    <string name="app_input_page_name">输入应用包名</string>
    <string name="app_get">获取</string>
    <string name="app_application_name">应用名称：</string>
    <string name="app_application_icon">应用图标：</string>
    <string name="app_application_version_name">应用版本名称：</string>
    <string name="app_application_version_code">应用版本号：</string>
    <string name="app_application_size">应用大小：</string>
    <string name="app_application_sign">应用签名：</string>
    <string name="app_application_sign_md5">应用签名MD5：</string>
    <string name="app_application_channel">应用渠道：</string>
    <string name="main_screenshots">屏幕截屏</string>
    <string name="main_area_screenshots">区域截屏</string>
    <string name="main_scroll_screenshots">ScrollView截屏</string>
    <string name="main_icon_coloring">图标着色</string>
    <string name="main_amount_conversion">金额转换</string>
    <string name="main_get_application_info">通过包名获取应用信息</string>
    <string name="main_location_info">获取定位信息</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_encode_decode">加解密</string>
</resources>
