<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="设备信息" />

            <TextView
                android:id="@+id/txt_device_info"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>

        </LinearLayout>


        <EditText
            android:id="@+id/edit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/app_input_page_name"
            android:paddingStart="15dp"
            android:paddingLeft="15dp" />

        <Button
            android:id="@+id/btn_get"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_get" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/app_application_name" />

            <TextView
                android:id="@+id/txt_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                tools:text="@string/app_application_name" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/app_application_icon" />

            <ImageView
                android:id="@+id/img_icon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                tools:ignore="ContentDescription"
                tools:src="@drawable/base_nav_share" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/app_application_version_name" />

            <TextView
                android:id="@+id/txt_version_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                tools:text="@string/app_application_version_name" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/app_application_version_code" />

            <TextView
                android:id="@+id/txt_version_code"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                tools:text="@string/app_application_version_code" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/app_application_size" />

            <TextView
                android:id="@+id/txt_size"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                tools:text="@string/app_application_size" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/app_application_sign" />

            <TextView
                android:id="@+id/txt_sign"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                tools:text="@string/app_application_sign" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/app_application_sign_md5" />

            <TextView
                android:id="@+id/txt_sign_md5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                tools:text="@string/app_application_sign_md5" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/app_application_channel" />

            <TextView
                android:id="@+id/txt_channel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                tools:text="@string/app_application_channel" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="返回" />

    </LinearLayout>

</ScrollView>
