<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/app_input_page_name"
            android:paddingLeft="15dp" />

        <Button
            android:id="@+id/btn_get"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_get" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/app_application_name" />

            <TextView
                android:id="@+id/txt_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                tools:text="应用名称" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/app_application_icon" />

            <ImageView
                android:id="@+id/img_icon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                tools:src="@drawable/base_nav_share"
                tools:ignore="ContentDescription" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
