<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/item_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/main_screenshots" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#f0f0f0" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/item_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/main_area_screenshots" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#f0f0f0" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/item_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/main_scroll_screenshots" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#f0f0f0" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/item_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center">

                <ImageView
                    android:id="@+id/imageView_4"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/base_nav_share"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@+id/imageView_4"
                    android:layout_toRightOf="@+id/imageView_4"
                    android:gravity="center"
                    android:text="@string/main_icon_coloring" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#f0f0f0" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/item_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/main_amount_conversion" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#f0f0f0" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/item_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/main_get_application_info" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#f0f0f0" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/item_7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/main_location_info" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#f0f0f0" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/item_8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/main_encode_decode" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#f0f0f0" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/item_9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/main_bitmap_load" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#f0f0f0" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
